[gd_scene load_steps=2 format=2]

[ext_resource path="res://ships/enemies/enemySpawner.gd" type="Script" id=1]

[node name="enemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="spawnPositions" type="Node2D" parent="."]

[node name="spawnPos1" type="Position2D" parent="spawnPositions"]
position = Vector2( 200, 0 )

[node name="spawnPos2" type="Position2D" parent="spawnPositions"]
position = Vector2( 500, 0 )

[node name="spawnPos3" type="Position2D" parent="spawnPositions"]
position = Vector2( 800, 0 )

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
