[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Backgrounds/blue.png" type="Texture" id=1]
[ext_resource path="res://ships/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ships/player/Player.gd" type="Script" id=3]
[ext_resource path="res://ships/enemies/enemy1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/bgScroll.gd" type="Script" id=5]
[ext_resource path="res://assets/PNG/Meteors/meteorBrown_small1.png" type="Texture" id=6]
[ext_resource path="res://assets/PNG/Meteors/meteorBrown_big2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=8]
[ext_resource path="res://ships/enemies/enemySpawner.gd" type="Script" id=9]

[node name="gameStage" type="Node2D"]
pause_mode = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1600, 900 )

[node name="background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 900 )

[node name="meteor1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 767, 105 )
texture = ExtResource( 6 )

[node name="meteor2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 245, 307 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="ParallaxBackground"]
format = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 502, 486 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="enemy1" parent="." instance=ExtResource( 4 )]
position = Vector2( 506, 2 )
scale = Vector2( 0.35, 0.35 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 69

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="enemySpawner" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="spawnPositions" type="Node2D" parent="enemySpawner"]

[node name="spawnPos1" type="Position2D" parent="enemySpawner/spawnPositions"]
position = Vector2( 200, 0 )

[node name="spawnPos2" type="Position2D" parent="enemySpawner/spawnPositions"]
position = Vector2( 500, 0 )

[node name="spawnPos3" type="Position2D" parent="enemySpawner/spawnPositions"]
position = Vector2( 800, 0 )

[node name="spawnTimer" type="Timer" parent="enemySpawner"]
wait_time = 2.0
autostart = true
